package com.bartoszek.jtzweakreferences;

import java.awt.*;

public interface Viewer {
    Font getFont();
    Dimension getImageSize();
}